--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 repository = "https://github.com/NobukazuHanada/wordcount"
 categories = ["command-line-utillities"]
 keywords = ["example", "frequency", "text"]
-
+exclude = ["text.txt", "tests/*"]
 
 [dependencies]
 regex = "1.0"
